Archive2/4b/51a6d555b815cd/output
main.cpp:10:3: error: call to implicitly-deleted copy constructor of 'A'
A t = a;
  ^   ~
main.cpp:4:5: note: copy constructor is implicitly deleted because 'A' has a user-declared move constructor
    A(const A&&){ };
    ^
1 error generated.
