Archive2/4b/51a6d555b815cd/main.cpp
struct A
{
    A(){ };
    A(const A&&){ };
    ~A(){ };
};

A a;

A t = a;

int main()
{ 
    
}

